# ntu-fintech-final-report

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  task.md
docs/: report.tex  slide.tex
scripts/: download_data.py  run_analysis.py
src/: analysis.py  data_fetching.py  plotting.py
src/fin_tech_final.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
